<resources>
    <string name="app_name">TrainApp</string>
    <string name="search_welcome_message">Quelle sera votre prochaine destination ?</string>
    <string name="search_from_label">Départ</string>
    <string name="search_to_label">Arrivée</string>
    <string name="search_today">Aujourd\'hui</string>
    <string name="search_next_time">Trajets suivants</string>
    <string name="search_prev_time">Trajets précédents</string>
    <string name="start_hour">06:00</string>
</resources>